--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "start": "npm run dev"
   },
   "dependencies": {
+    "i18next": "^21.9.0",
     "markdown-it": "^13.0.1",
+    "react-i18next": "^11.18.3",
     "react-intersection-observer": "^9.4.0",
     "react-transition-group": "^4.4.5",
     "umi": "^4.0.8"
